<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="add_pic">添加图片</string>
    <string name="add_user">增加用户</string>
    <string name="app_name">Tata Dev</string>
    <string name="cancel_oauth">注销</string>
    <string name="cancel">取消</string>
    <string name="close">close</string>
    <string name="dateFlash">数据已刷新</string>
    <string name="default_text">她他音乐，音乐你我TA</string>
    <string name="demo_open_text">阅读(说明.txt)</string>
    <string name="demo_close_text">退出(说明.txt)</string>
    <string name="exit">退出</string>
    <string name="friendsCount">关注数：</string>
    <string name="followingCount">粉丝数：</string>
    <string name="favouritesCount">收藏数：</string>
    <string name="home_left_text">个人资料展示</string>
    <string name="is_cartoon">启动加载动画</string>
    <string name="is_musicback">后台播放音乐</string>
    <string name="list_repeat">列表循环</string>
    <string name="list2">区分首页菜单</string>
    <string name="loading">正在加载...</string>
    <string name="login">新浪微博登录</string>
    <string name="login_user">登录用户</string>
    <string name="loving">我爱开发，功能暂未开放...</string>
    <string name="love_read">我爱阅读</string>
    <string name="love_music">我爱音乐</string>
    <string name="main_at">\@我</string>
    <string name="main_comment">评论</string>
    <string name="main_message">私信</string>
    <string name="main_home">首页</string>
    <string name="main_news">信息</string>
    <string name="main_my_info">我的资料</string>
    <string name="menu_music">音乐</string>
    <string name="menu_friends_timeline">鸡汤一</string>
    <string name="menu_user_timeline">鸡汤二</string>
    <string name="menu_comments_by_me">鸡汤三</string>
    <string name="menu_comments_to_me">鸡汤四</string>
    <string name="menu_userinfo_show">鸡汤五</string>
    <string name="menu_end_session">取消</string>
    <string name="more_text">ps:点击菜单按钮显示另类菜单样式</string>
    <string name="more">更多</string>
    <string name="music_init">音乐插件初始化成功.</string>
    <string name="neweibo">发表微博</string>
    <string name="new_writer">说点什么吧？</string>
    <string name="oauth_info_body">首次使用需进行登录授权！</string>
    <string name="oauth_info_title">授权提示:</string>
    <string name="oauth">授权</string>
    <string name="open">open</string>
    <string name="open_text">打开文本</string>
    <string name="quit">再按一次退出程序</string>
    <string name="random_style">随机模式</string>
    <string name="reader">阅读</string>
    <string name="refresh">刷新</string>
    <string name="reflashHome">当前没有数据，请重新刷新页面</string>
    <string name="statusesCount">微博数：</string>
    <string name="setting_text">设置</string>
    <string name="setting_close">关</string>
    <string name="setting_open">开</string>
    <string name="send_sucess">发表成功！</string>
    <string name="send_failed">发表失败！</string>
    <string name="song_list">歌曲列表</string>
    <string name="song_time">00:00</string>
    <string name="song_style">播放模式</string>
    <string name="shuoming">Its a MSG tab page!</string>
    <string name="single_repeat">单曲循环</string>
    <string name="text_num">140</string>
    <string name="title_load">Tata</string>
    <string name="user_info">个人资料</string>
    <string name="weibosdk_demo_token_info">Token 信息：</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_obtain_token_hint"><b>请注意：</b>\n<li>SSO 登录需要微博客户端的支持，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 Web 授权认证（即第一种认证方式）</li>\n<li>如果您通过方式一和方式二获取不到 Token，而是获取到 code，那说明您的包名和签名存在问题，请到开放平台注册包名和签名。详情请查看 FAQ 文档</li></string>
    <string name="welcome">欢迎使用她他</string>
    <string name="welcomback">欢迎回来</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="zero_time">00:00</string>
    <string name="notice_weixin_lengthless">微信名长度不能小于6</string>
    <string name="notice_weixin_no_chinese">微信号不能有中文名称</string>
    <string name="notice_apply_fail">提交申请失败</string>
    <string name="notice_update_fail">更新失败</string>
    <string name="notice_feedback_fail">反馈失败</string>
    <string name="progress_wait">拼命加载中,请等待...</string>
    <string name="notice_get_userinfo_fail">获取信息失败</string>
    <string name="make_erweima">生成二维码</string>
    <string name="erweima_share_et">二维码方式分享(文字等)</string>
    <string name="scan_erweima">扫描二维码</string>
    <string name="null_str">null</string>
</resources>
