<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/qrcode_dencode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_erweima" />

    <EditText
        android:id="@+id/erweima_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_white_5dp_blue"
        android:padding="@dimen/margin_size_16dp"
        android:layout_marginLeft="@dimen/margin_size_5dp"
        android:layout_marginRight="@dimen/margin_size_5dp"
        android:layout_marginTop="@dimen/margin_size_50dp"
        android:layout_marginBottom="@dimen/margin_size_8dp"
        android:hint="@string/erweima_share_et"/>
    <Button
        android:id="@+id/qrcode_encode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_erweima" />

    <ImageView
        android:id="@+id/qrcode_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/null_str"/>
</LinearLayout>
