<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/msg_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_wb"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/titlebar_lightgray_bg" >
            </TextView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="5dip" >

                <Button
                    android:id="@+id/bt_group_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/title_button_group_left"
                    android:text="@string/main_at"
                    android:textColor="#ffffffff" >
                </Button>

                <Button
                    android:id="@+id/bt_group_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/title_button_group_middle"
                    android:text="@string/main_comment"
                    android:textColor="#ffffffff" >
                </Button>

                <Button
                    android:id="@+id/bt_group_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/title_button_group_right"
                    android:text="@string/main_message"
                    android:textColor="#ffffffff" >
                </Button>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/maintab_toolbar_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_button0"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_1_n"
                android:tag="radio_button0"
                android:text="@string/main_home" />

            <RadioButton
                android:id="@+id/radio_button1"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_2_n"
                android:tag="radio_button1"
                android:text="@string/main_news" />

            <RadioButton
                android:id="@+id/radio_button2"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_3_n"
                android:tag="radio_button2"
                android:text="@string/main_my_info" />

            <RadioButton
                android:id="@+id/radio_button3"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_4_n"
                android:tag="radio_button3"
                android:text="@string/menu_search" />

            <RadioButton
                android:id="@+id/radio_button4"
                style="@style/main_tab_bottom"
                android:layout_marginTop="2.0dip"
                android:drawableTop="@drawable/icon_5_n"
                android:tag="radio_button4"
                android:text="@string/more" />
        </RadioGroup>
    </LinearLayout>

</TabHost>