<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1" >

    <include
        android:id="@+id/layout_title_bar"
        layout="@layout/home_tilte_bar" />

    <EditText
        android:id="@+id/weibo_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:hint="@string/new_writer" >
    </EditText>

    <ImageView
        android:id="@+id/writer_images"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@null"
        android:src="@drawable/angel"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_text_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/text_num"
            android:textColor="#333" />

        <Button
            android:id="@+id/upImage_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/add_pic" />
    </LinearLayout>

</LinearLayout>