<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/huise"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_title_bar"
        layout="@layout/home_tilte_bar" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/read_relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/huise" >

            <Button
                android:id="@+id/read_btn_open"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/open_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/read_btn_setting"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/read_btn_open"
                android:layout_centerHorizontal="true"
                android:text="@string/setting_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/read_btn_demo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/read_btn_setting"
                android:layout_centerHorizontal="true"
                android:text="@string/demo_open_text"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/read_scroll_relative"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <Button
                android:id="@+id/read_btn_close"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/demo_close_text"
                android:textSize="20sp" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/read_btn_close" >

                <TextView
                    android:id="@+id/read_view_contents"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp" >
                </TextView>
            </ScrollView>
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>