<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/sblue"
    android:gravity="center_horizontal" >

    <ImageView
        android:id="@+id/user_head"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/user_slogans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_head"
        android:layout_centerHorizontal="true"
        android:textColor="@color/user"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/auto_user"
        android:layout_below="@id/user_slogans"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="65dp"
        android:layout_height="37dp"
        android:layout_alignRight="@id/auto_user"
        android:layout_below="@id/auto_user"
        android:background="@drawable/login_btn_selector"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="65dp"
        android:layout_height="37dp"
        android:layout_below="@id/auto_user"
        android:layout_toLeftOf="@id/logout"
        android:background="@drawable/login_btn_selector"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/adduser"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/logout"
        android:background="@drawable/user_add" />

    <TextView
        android:id="@+id/adduser_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/adduser"
        android:text="@string/add_user"
        android:textColor="@color/huise"
        android:textSize="12sp" />

</RelativeLayout>