<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#b7ba6b"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/home_left_menu_image"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@null"
        android:src="@drawable/me_head_bg" />

    <com.tatait.tataweibo.util.show.CircularImage
        android:id="@+id/cover_user_photo"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp" />

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/home_left_menu_image"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/home_left_menu_image"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/home_left_menu_user"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:textColor="@color/sblue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/home_left_menu_location"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@+id/home_left_menu_user"
            android:textColor="@color/huise"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/home_left_menu_qianming"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@+id/home_left_menu_location"
            android:textColor="@color/sblack"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/home_left_linear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="10dip"
        android:layout_below="@+id/home_left_menu_image"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/userinfo_friendsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/userinfo_above_left"
                android:gravity="center"
                android:text="@string/friendsCount"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/userinfo_statusesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/userinfo_above_right"
                android:gravity="center"
                android:text="@string/statusesCount"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/userinfo_followingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/userinfo_below_left"
                android:gravity="center"
                android:text="@string/followingCount"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/userinfo_favouritesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/userinfo_below_right"
                android:gravity="center"
                android:text="@string/favouritesCount"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
	<ImageView
        android:id="@+id/home_left_bottom_image"
        android:layout_below="@+id/home_left_linear"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@null"
        android:src="@drawable/load" />
</RelativeLayout>